fixed desktop page-y scrollbar

--- a/src/components/WrapDesktop/WrapDesktop.module.css
+++ b/src/components/WrapDesktop/WrapDesktop.module.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: 0 auto;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 90px);
     height: 100%;
 }
 
